выполнено ТЗ 8 ФЗ